# com-etzhayyim-tsumugi

./: CLAUDE.md  actor.edn  kotoba.app.edn  manifest.jsonld  run_tests.sh
.well-known/: did.json
data/: .gitignore  seed-banner.kotoba.edn  seed-influence-history.kotoba.edn  seed-power-graph.kotoba.edn  seed-scale-power.kotoba.edn
data/ingest-influence/: wikidata-live-sample.sparql.json  (+1 more)
deploy/: README.md  agent.py
dna/: tsumugi.dna.edn  tsumugi.integrity.edn
methods/: analyze.cljc  analyze.py  analyze_banner.cljc  analyze_banner.py  analyze_influence.cljc  analyze_influence.py  analyze_scale.cljc  analyze_scale.py  autorun.cljc  autorun.py  coverage_report.cljc  coverage_report.py  coverage_scale.cljc  coverage_scale.py  fission_gate.cljc  fission_gate.py  ie_flow.cljc  ingest.cljc  ingest.py  ingest_influence.cljc  ingest_influence.py  ingest_scale.cljc  ingest_scale.py  mesh.clj  narrate.cljc  narrate.py  project_influence_posts.cljc  project_influence_posts.py  publish.bb  publish.cljc  publish.py  publish_ipfs.cljc  publish_ipfs.py  resolve.cljc  resolve.py  test_analyze.cljc  test_analyze_influence.cljc  test_analyze_scale.cljc  test_autorun.cljc  test_coverage_report.cljc  (+14 more)
tests/: test_autorun.py  test_banner.cljc  test_banner.py  test_coverage_scale.py  test_fission_gate.py  test_influence.py  test_ingest_coverage.py  test_ingest_scale.py  test_narrate.py  test_publish.py  test_publish_ipfs.py  test_resolve.py  test_scale.py  test_topics.py
wasm/: README.md  build.sh
wasm/tsumugi-core/: .gitignore  Cargo.toml
wasm/tsumugi-core/src/: lib.rs
(+7 files in other folders)
